k8s/apps/gearhawk/web-gearhawk/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-gearhawk
  annotations:
    operator.1password.io/auto-restart: "true"
