k8s/apps/gearhawk/web-gearhawk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-gearhawk-svc
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  selector:
    app: web-gearhawk
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
